<resources>
    <string name="app_name">Kanjani Facts!!</string>
    <string name="question_Yoko">Yoko is the oldest member in Kanjani.</string>
    <string name="question_Subaru">Subaru will be the vocal in this summer concert.</string>
    <string name="question_Shingo">Hina has the cutest eyes in this world.</string>
    <string name="question_Maru">Maru plays guitar.</string>
    <string name="question_Ryo">Ryo is the bravest member in Kanjani. </string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="warning_text">Are you sure you want to do this? </string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong</string>
</resources>

